Work for #5987: fix popup under safari's scrollbar

--- a/src/common-styles/sv-popup.scss
+++ b/src/common-styles/sv-popup.scss
@@ -14,7 +14,7 @@ sv-popup {
   top: 0;
   width: 100vw;
   outline: none;
-  z-index: 1500;
+  z-index: 2000;
 }
 
 .sv-popup__container {
